[FIX] website, website_sale: fix products carousel layout issues
This commit fixes two layout issues:

1. In the dynamic products snippet: using the layout "centered", the
image was overlapping the text of the card due to having no height set
for the image.

2. On the dynamic carousel snippet: on mobile, a scrollbar was
appearing because of the arrow buttons.

task-4215589

X-original-commit: 4f3e13eb42094e1bf59ed9f5ae2db85d14d047f8

--- a/addons/website_sale/static/src/snippets/s_dynamic_snippet_products/000.scss
+++ b/addons/website_sale/static/src/snippets/s_dynamic_snippet_products/000.scss
@@ -6,6 +6,10 @@
         overflow: visible;
         margin-top: 6rem;
         padding-top: 6rem;
+
+        img {
+            height: 12rem;
+        }
     }
 
     .o_carousel_product_img_link {
